--- a/app/src/main/res/layout/activity_crime_pager.xml
+++ b/app/src/main/res/layout/activity_crime_pager.xml
@@ -21,11 +21,12 @@
             android:id="@+id/btn_jump_to_first"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""/>
+            android:text="@string/jump_to_first"/>
         <Button
             android:id="@+id/btn_jump_to_last"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="@string/jump_to_last"/>
 
     </LinearLayout>
 </LinearLayout>
